ecmascript/parser/tests/typescript-errors/tsc/expressions/newOperator/newOperatorErrorCases/input.ts.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
  --> $DIR/tests/typescript-errors/tsc/expressions/newOperator/newOperatorErrorCases/input.ts:32:23
   |
32 | var c2 = new T<string>; // Parse error
   |                       ^

error: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/expressions/newOperator/newOperatorErrorCases/input.ts:27:16
   |
27 | var b = new C0 32, ''; // Parse error
   |                ^^

